--- a/MyWeather/MyWeather/Base.lproj/Main.storyboard
+++ b/MyWeather/MyWeather/Base.lproj/Main.storyboard
@@ -13,7 +13,7 @@
         <!--View Controller-->
         <scene sceneID="Cxw-pF-A6R">
             <objects>
-                <viewController id="vvZ-Bx-FVv" sceneMemberID="viewController">
+                <viewController id="vvZ-Bx-FVv" customClass="ViewController" customModule="MyWeather" sceneMemberID="viewController">
                     <view key="view" contentMode="scaleToFill" id="Z1y-3j-tKe">
                         <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
